# cuda-oxide

./: Cargo.toml  README.md
.github/workflows/: unit-tests.yml
crates/cargo-oxide/: README.md
crates/cuda-bindings/: README.md  build.rs
crates/mir-importer/: Cargo.toml  README.md
crates/mir-lower/: README.md
crates/mir-transforms/: Cargo.toml
crates/mir-transforms/src/: canonicalize.rs  lib.rs  unroll.rs
crates/mir-transforms/src/analyses/: induction.rs  loop_info.rs  mod.rs
crates/mir-transforms/tests/: induction.rs  loop_info.rs  unroll.rs
crates/mir-transforms/tests/common/: mod.rs
crates/rustc-codegen-cuda/: Cargo.toml  README.md  STATUS.md
crates/rustc-codegen-cuda/examples/select_unpredictable/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/select_unpredictable/src/: main.rs
crates/rustc-codegen-cuda/examples/shared_slice_unsize/: Cargo.toml
crates/rustc-codegen-cuda/examples/shared_slice_unsize/src/: main.rs
crates/rustc-codegen-cuda/examples/unroll_smoke/: Cargo.toml
crates/rustc-codegen-cuda/examples/unroll_smoke/src/: main.rs
cuda-oxide-book/: index.md
cuda-oxide-book/appendix/: api-quick-reference.md  glossary.md  supported-features.md
cuda-oxide-book/compiler/: architecture-overview.md  compiler-optimizations.md  lowering-pipeline.md  mir-importer.md  mlir-dialects.md  rustc-codegen-cuda.md
cuda-oxide-book/gpu-programming/: error-handling-and-debugging.md  kernels-and-device-functions.md  launching-kernels.md
intrinsics/: abi-v1.toml  overlay.toml
intrinsics/evidence/: cuda-13.3-libnvvm-13.3.33-scalar-math.json  rust-llvm-22.1.2-1cb4e383-scalar-math.json
intrinsics/overlay/: scalar_math.toml
intrinsics/probes/: abs_bf16x2.ll  abs_f16x2.ll  active_mask.ll  add_bf16x2.ll  add_f16x2.ll  add_rm_f32.ll  add_rm_f64.ll  add_rm_ftz_f32.ll  add_rm_ftz_sat_f32.ll  add_rm_sat_f32.ll  add_rn_f32.ll  add_rn_f64.ll  add_rn_ftz_f32.ll  add_rn_ftz_sat_f32.ll  add_rn_sat_f32.ll  add_rp_f32.ll  add_rp_f64.ll  add_rp_ftz_f32.ll  add_rp_ftz_sat_f32.ll  add_rp_sat_f32.ll  add_rz_f32.ll  add_rz_f64.ll  add_rz_ftz_f32.ll  (+808 more)
scripts/: smoketest.sh
(+103 files in other folders)
