[package]
name = "select_unpredictable"
version = "0.1.0"
edition = "2024"
authors = ["Nils Homer <nilshomer@gmail.com>"]
license = "Apache-2.0"

[workspace]

[dependencies]
cuda-core = { path = "../../../cuda-core" }
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
