#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "shared_slice_unsize"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Regression coverage for unsizing a shared-memory array to a slice:
# `&mut [T; N]` in addrspace(3) -> `&mut [T]` must addrspacecast the data
# pointer into the fat pointer's generic field-0 slot (cvta.shared).
#
# Run with:
#   cargo oxide run shared_slice_unsize

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
