[package]
name = "unroll_smoke"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

# Smoke test for the `#[unroll]` / `#[unroll(N)]` loop-unroll transform.
#   cargo oxide run unroll_smoke

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
